--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,24 @@
       display: none;
     }
     .order-type{
-      margin-top: 0;
-
+      margin-top:0px;
+padding-top: 0;
+    }
+    .name{
+      display:block;
     }
     }
     
+  
+    table tbody tr td {
+      margin: 0px 0px ;
+      border: 0px;
+      padding: 0px;
+    }
+    .order-type{
+      margin-top:20px;
+
+    }
+    .name{
+      display: none;
+    }
