--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
   .header-pos{
     display: block;
   }
-  
+  .sum-price {
+    color: #000;
+  }
     @page {
       width: 80mm;
       margin: 0 auto; 
