--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,21 @@
     color: #fff;
     background-color:#FD720D;
   }
+  .card-report-1{
+    font-size: 18px;
+    padding: 8px;
+    color: #fff;
+    background-color: #FD720D;
+  }
+  .card-report-2{
+    font-size: 18px;
+    padding: 8px;
+    color: #fff;
+    background-color: #0c8ab1;
+  }
+  .card-report-3{
+    font-size: 18px;
+    padding: 8px;
+    color: #fff;
+    background-color: #b30a9c;
+  }
