--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,27 @@ padding-top: 0;
       display: none;
     }
 
+
+    .total{
+      color: #fff;
+      padding: 20px;
+      background-color: rgb(4, 145, 63);
+    }
+
+    @media (max-width: 768px) {
+      .sticky-bottom-mobile {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 9999;
+        background-color: white;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        padding: 10px;
+      }
+    
+      .sticky-bottom-mobile .btn {
+        margin-bottom: 5px;
+      }
+    }
+    
