--- a/src/index.css
+++ b/src/index.css
@@ -25,16 +25,19 @@
     padding: 8px;
     color: #fff;
     background-color: #FD720D;
+    border-radius: 8px;
   }
   .card-report-2{
     font-size: 18px;
     padding: 8px;
     color: #fff;
     background-color: #0c8ab1;
+      border-radius: 8px;
   }
   .card-report-3{
     font-size: 18px;
     padding: 8px;
     color: #fff;
     background-color: #b30a9c;
+      border-radius: 8px;
   }
