--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .header-pos{
+   margin-top: 40px;
   display: none;
 }
 .show-header{
@@ -48,7 +49,7 @@ padding-top: 0;
     .total{
       color: #fff;
       padding: 20px;
-      background-color: rgb(206, 127, 8);
+      background-color: #FD720D;
       border-radius: 5px;
     }
 
